# stremio-addon-sdk-rs

./: .gitignore  Cargo.toml  README.md
example-addon/: Cargo.toml  Procfile  now.json
example-addon/src/: handlers.rs  main.rs  manifest.rs  serverless.rs
sdk/: Cargo.toml  landing_style.css
sdk/src/: builder.rs  cache_middleware.rs  helpers.rs  landing_template.rs  lib.rs  router.rs  scaffold.rs  server.rs
src/: main.rs  router.rs
src/lib/: router.rs  server.rs
