[package]
name = "stremio-addon"
version = "0.1.0"
authors = ["Ivo Georgiev <ivo@strem.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stremio-core = { git = "https://github.com/stremio/stremio-core" }
semver = "*"
tide = "=0.5.0"
http = "0.1"
futures = "0.1"
tokio = { version = "0.2", features = ["full"] }
