[package]
name = "example-addon"
version = "0.1.0"
authors = ["Sleeyax <yourd3veloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stremio-core = { git = "https://github.com/stremio/stremio-core" }
stremio-addon-sdk = { path = "../sdk/" }
semver = "*"
futures = "0.1"
tokio = { version = "0.2", features = ["full"] }
# required for now.sh deployments
# ---
http = "0.1"
now_lambda = "0.1"
serde_json = "1.0"
# comment 'stremio-addon-sdk' above and uncomment the following:
# stremio-addon-sdk = {git = "https://github.com/sleeyax/stremio-addon-sdk/", branch = "now"}
[lib]
name = "serverless"
path = "src/serverless.rs"
# ---
