[package]
name = "example-addon"
version = "0.1.0"
authors = ["Sleeyax <yourd3veloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stremio-core = { git = "https://github.com/stremio/stremio-core" }
stremio-addon-sdk = { path = "../sdk/" }
semver = "*"
futures = "0.1"
tokio = { version = "0.2", features = ["full"] }

# for now.sh deployments, comment 'stremio-addon-sdk' above and uncomment the following:
# stremio-addon-sdk = {git = "https://github.com/sleeyax/stremio-addon-sdk/"}
[lib]
name = "serverless"
path = "src/serverless.rs"
