[package]
name = "stremio-addon-sdk"
version = "0.1.0"
authors = ["Ivo Georgiev <ivo@strem.io>", "Sleeyax <yourd3veloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stremio-core = { git = "https://github.com/stremio/stremio-core" }
semver = "*"
# temporary fork of tide untill CORS is officialy suported in the latest version
tide = { git = "https://github.com/sleeyax/tide" }
http = "0.1"
futures = "0.1.x"
