[package]
name = "stremio-addon-sdk"
version = "0.1.2"
authors = ["Ivo Georgiev <ivo@strem.io>", "Sleeyax <yourd3veloper@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stremio-core = { git = "https://github.com/stremio/stremio-core" }
hyper = "^0.12"
serde_json = "1.0"
semver = "*"
futures = "0.1.x"
now_lambda = "0.1.3"
